--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "homepage": "https://TheAlfadur.github.io",
   "dependencies": {
-    "gatsby": "^2.24.50",
-    "gatsby-image": "^2.4.16",
+    "@material-ui/styles": "^4.10.0",
+    "gatsby": "^2.24.55",
+    "gatsby-image": "^2.4.17",
     "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-manifest": "^2.4.24",
-    "gatsby-plugin-offline": "^3.2.24",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.28",
-    "gatsby-source-filesystem": "^2.3.27",
-    "gatsby-transformer-remark": "^2.8.32",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-plugin-sharp": "^2.6.33",
+    "gatsby-source-filesystem": "^2.3.28",
+    "gatsby-transformer-remark": "^2.8.34",
+    "gatsby-transformer-sharp": "^2.5.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
