--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "@material-ui/styles": "^4.10.0",
     "@mdx-js/mdx": "^1.6.17",
     "@mdx-js/react": "^1.6.17",
-    "gatsby": "^2.24.55",
-    "gatsby-image": "^2.4.17",
-    "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby": "^2.24.62",
+    "gatsby-image": "^2.4.19",
+    "gatsby-plugin-catch-links": "^2.3.12",
+    "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-mdx": "^1.2.39",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.33",
-    "gatsby-remark-copy-linked-files": "^2.3.14",
-    "gatsby-remark-images": "^3.3.29",
-    "gatsby-remark-prismjs": "^3.5.12",
-    "gatsby-remark-responsive-iframe": "^2.4.13",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.28",
-    "gatsby-transformer-remark": "^2.8.34",
-    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-plugin-mdx": "^1.2.40",
+    "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-remark-copy-linked-files": "^2.3.15",
+    "gatsby-remark-images": "^3.3.30",
+    "gatsby-remark-prismjs": "^3.5.13",
+    "gatsby-remark-responsive-iframe": "^2.4.14",
+    "gatsby-remark-smartypants": "^2.3.11",
+    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.35",
+    "gatsby-transformer-sharp": "^2.5.15",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-gist": "^1.2.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
