--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "homepage": "https://TheAlfadur.github.io",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
-    "@mdx-js/mdx": "^1.6.17",
-    "@mdx-js/react": "^1.6.17",
+    "@mdx-js/mdx": "^1.6.18",
+    "@mdx-js/react": "^1.6.18",
     "gatsby": "^2.24.62",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-catch-links": "^2.3.12",
